feat: Finalizada a documentação com todos os endpoints
